// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesToolbar should render Toolbar, if category can be found 1`] = `
<Toolbar>
  <ToolbarAnchor
    href="https://cms.integreat-app.de/augsburg/en/wp-json/ig-mpdf/v1/pdf?url=/augsburg/de/willkommen"
    name="file-pdf-o"
    text="createPdf"
  />
  <FeedbackModal
    city="augsburg"
    id={3649}
    isOpen={false}
    isPositiveRatingSelected={false}
    language="en"
    pathname="/augsburg/de/willkommen"
    title="Willkommen"
  />
</Toolbar>
`;

exports[`CategoriesToolbar should render root-url for pdf endpoint 1`] = `
<Toolbar>
  <ToolbarAnchor
    href="https://cms.integreat-app.de/augsburg/en/wp-json/ig-mpdf/v1/pdf"
    name="file-pdf-o"
    text="createPdf"
  />
  <FeedbackModal
    city="augsburg"
    id={0}
    isOpen={false}
    isPositiveRatingSelected={false}
    language="en"
    pathname="/augsburg/de"
    title="augsburg"
  />
</Toolbar>
`;
